Working with folder and files size/count
Get largest folder's size
Get largest folder's count
Get folders over defined size
Get files over defined size

--- a/08. Backup selected files/backUp_selected_files.ipynb
+++ b/08. Backup selected files/backUp_selected_files.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,34 +11,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 73,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\zhuseynov\\\\Documents\\\\GitHub\\\\Automate-boring-stuff\\\\08. Backup selected files'"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "os.chdir('D:\\\\')"
+    "os.getcwd()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.mkdir(\"D:\\\\temp\")"
+    "os.mkdir('..\\\\08. Backup selected files\\\\temp')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
-    "backUpFile = zipfile.ZipFile('D:\\\\backUp.zip', 'w')"
+    "AbsPath = os.path.abspath('..\\\\08. Backup selected files\\\\temp')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "backUpFile = zipfile.ZipFile('..\\\\08. Backup selected files\\\\backup.zip', 'w')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,64 +69,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "['New folder']\n",
-      "[]\n"
-     ]
-    }
-   ],
+   "execution_count": 79,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
-    "for folderNames,subfolders, filenames in os.walk('D:\\\\testbook'):\n",
+    "number = 1\n",
+    "for folderNames,subfolders, filenames in os.walk('..\\\\08. Backup selected files\\\\testbook'):\n",
     "    for file in filenames:\n",
-    "        if file.endswith('.py'):\n",
-    "            shutil.copy(file)"
+    "        if file.endswith('.py') or file.endswith('.txt'):\n",
+    "            if file not in os.listdir('..\\\\08. Backup selected files\\\\temp'):\n",
+    "                shutil.copy(os.path.join(folderNames,file), '..\\\\08. Backup selected files\\\\temp')\n",
+    "            else:\n",
+    "                fileParts = fileType.search(file)\n",
+    "                shutil.copy(os.path.join(folderNames,file), \\\n",
+    "                            os.path.join('..\\\\08. Backup selected files\\\\temp', \\\n",
+    "                                         fileParts.group(2) + '-' + str(number) + fileParts.group(3)))\n",
+    "                number += 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['testbook/New Folder/py1.py']"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "backUpFile.namelist()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
-    "backUpFile.write('D:\\\\testbook\\\\New Folder\\\\py1.py')"
+    "for file in os.listdir('..\\\\08. Backup selected files\\\\temp'):\n",
+    "    backUpFile.write(os.path.join(AbsPath,file))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
